Blissify: show AOD on charge setting (3/3)
For the case where custom doze package replaces stock one
and user wants the ability to toggle on off this behavior

Change-Id: Ibe47d819e5c3dc10c49308d3e2a1e1269d18990a

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -686,4 +686,8 @@
     <string name="lockscreen_hide_status_bar_title">Hide status bar</string>
     <string name="lockscreen_hide_status_bar_summary">Touch status bar to toggle visibility</string>
 
+    <!-- doze on charge -->
+    <string name="doze_on_charge_title">Show when charging</string>
+    <string name="doze_on_charge_summary">Wake screen when charging</string>
+
 </resources>
