Blissify: Add Cookie QS style [2/3]
Signed-off-by: Joey Huab <joey@evolution-x.org>
Change-Id: I6d989d10dc456c84a6461179270285f414d4c049

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1679,6 +1679,7 @@
         <item>@string/qstile_attemptmountain</item>
         <item>@string/qstile_squaremedo</item>
         <item>@string/qstile_inkdrop</item>
+        <item>@string/qstile_cookie</item>
     </string-array>
 
     <string-array name="qs_selector_values" translatable="false">
@@ -1693,6 +1694,7 @@
         <item>8</item>
         <item>9</item>
         <item>10</item>
+        <item>11</item>
     </string-array>
 
 </resources>
