Volume dialog timeout (2/2)
Change-Id: I44c11ea9334a53818193aecf103725128f53375a
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -678,5 +678,6 @@
     <string name="audio_panel_view_alarm_title">Alarm</string>
     <string name="audio_panel_view_voice_title">Voice</string>
     <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
+    <string name="audio_panel_view_timeout_title">Volume panel timeout</string>
 
 </resources>
