--- a/res/xml/volume_panel.xml
+++ b/res/xml/volume_panel.xml
@@ -19,6 +19,14 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/audio_panel_view_title">
 
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="audio_panel_view_timeout"
+        android:title="@string/audio_panel_view_timeout_title"
+        android:defaultValue="3"
+        android:max="10"
+        settings:min="1"
+        settings:interval="1" />
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="audio_panel_view_media"
         android:title="@string/audio_panel_view_media_title"
