Active edge settings 3/?
Change-Id: I43b4fe6ad9a9b476f40dd70469ebb8fdd1bd47e6

--- a/res/xml/gesture_main.xml
+++ b/res/xml/gesture_main.xml
@@ -14,6 +14,13 @@
         android:icon="@drawable/ic_carbon"
         android:fragment="com.blissroms.blissify.fragments.gestures.CarbonGesturesSettings" />
 
+        <Preference
+        android:key="active_edge_category"
+        android:icon="@drawable/dt_active_edge"
+        android:title="@string/active_edge_title"
+        android:summary="@string/active_edge_summary"
+        android:fragment="com.blissroms.blissify.fragments.gestures.ActiveEdge" />
+
     <!-- PA Pie -->
     <Preference
         android:key="pa_pie_control" 
