--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1117,8 +1117,9 @@
         <item>@string/action_volume_panel</item>
         <item>@string/action_screen_off</item>
         <item>@string/action_notifications</item>
-        <item>@string/action_screenshot</item>
+        <!--<item>@string/action_screenshot</item>-->
         <item>@string/action_qs_panel</item>
+        <item>@string/action_app_action</item>
     </string-array>
 
     <string-array name="active_edge_actions_values" translatable="false">
@@ -1131,8 +1132,9 @@
         <item>6</item>
         <item>7</item>
         <item>8</item>
-        <item>9</item>
+        <!--<item>9</item>-->
         <item>10</item>
+        <item>11</item>
     </string-array>
 
 </resources>
