--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -40,4 +40,12 @@
             lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
             android:defaultValue="true" />
 
+        <!-- QS clock -->
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="show_qs_clock"
+            android:icon="@drawable/ic_clock"
+            android:title="@string/qs_clock_title"
+            android:summary="@string/qs_clock_summary"
+            android:defaultValue="true" />
+
 </PreferenceScreen>
