--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -424,5 +424,9 @@
     <string name="qs_brightness_slider_title">Brightness slider</string>
     <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
 
+    <!-- QS clock -->
+    <string name="qs_clock_title">Clock</string>
+    <string name="qs_clock_summary">Display clock in quick status bar header</string>
+
 </resources>
 
