--- a/res/drawable/dt_active_edge.xml
+++ b/res/drawable/dt_active_edge.xml
@@ -1,48 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 The Dirty Unicorns Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="80.000000dp"
-    android:height="80.000000dp"
-    android:viewportWidth="512.000000"
-    android:viewportHeight="512.000000">
-
-    <group
-        android:translateY="512.000000"
-        android:scaleX="0.100000"
-        android:scaleY="-0.100000">
-        <path
-            android:fillColor="?android:attr/colorAccent"
-            android:strokeWidth="1"
-            android:pathData="M1386 4554 l-26 -27 0 -1992 0 -1992 26 -27 27 -26 1102 0 1102 0 27 26 26 27 0 1992 0 1992 -26 27 -27 26 -1102 0 -1102 0 -27 -26z m1934 -512 c19 -9 40 -28 47 -42 16 -32 19 -2863 3 -2904 -5 -14 -24 -35 -42 -46 -32 -19 -51 -20 -824 -20 l-791 0 -34 23 c-18 12 -36 33 -40 47 -11 40 -10 2865 1 2894 5 14 24 35 42 46 32 19 51 20 818 20 727 0 788 -1 820 -18z" />
-        <path
-            android:fillColor="?android:attr/colorAccent"
-            android:strokeWidth="1"
-            android:pathData="M712 4085 c-66 -45 -67 -64 -6 -170 130 -228 225 -514 278 -835 39 -239 53 -501 38 -722 -24 -347 -88 -651 -191 -912 -37 -91 -124 -268 -152 -307 -10 -15 -19 -41 -19 -58 0 -26 8 -36 52 -66 29 -19 65 -35 80 -35 32 0 45 17 121 160 144 270 238 586 293 980 25 178 25 682 0 860 -43 306 -100 533 -192 762 -44 110 -137 295 -176 351 -26 37 -61 35 -126 -8z" />
-        <path
-            android:fillColor="?android:attr/colorAccent"
-            android:strokeWidth="1"
-            android:pathData="M4202 4093 c-39 -56 -132 -241 -176 -351 -92 -229 -149 -456 -192 -762 -25 -178 -25 -682 0 -860 55 -394 149 -710 293 -980 76 -143 89 -160 121 -160 15 0 51 16 80 35 44 30 52 40 52 66 0 17 -9 43 -19 58 -64 89 -178 354 -224 521 -43 152 -58 218 -81 360 -97 596 -29 1215 189 1715 24 55 64 136 89 180 61 106 60 125 -6 170 -65 43 -100 45 -126 8z" />
-        <path
-            android:fillColor="?android:attr/colorAccent"
-            android:strokeWidth="1"
-            android:pathData="M670 2540 c0 -199 4 -360 8 -358 18 7 422 351 422 358 0 7 -404 351 -422 358 -4 2 -8 -159 -8 -358z" />
-        <path
-            android:fillColor="?android:attr/colorAccent"
-            android:strokeWidth="1"
-            android:pathData="M4150 2725 c-112 -95 -206 -177 -207 -182 -3 -9 394 -351 419 -361 4 -2 8 159 8 357 0 199 -3 361 -7 360 -5 0 -100 -79 -213 -174z" />
-    </group>
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
+  <path
+      android:pathData="M16.332,31.032L15.891,31.032C13.348,30.944 10.817,30.265 8.628,28.96C5.586,27.186 3.204,24.307 2.048,20.981C1.498,19.459 1.244,17.845 1.187,16.231L1.187,15.663C1.288,11.16 3.511,6.759 7.12,4.054C9.609,2.127 12.723,1.069 15.863,0.969L16.444,0.969C19.499,1.035 22.536,2.014 25.006,3.822C27.098,5.328 28.793,7.384 29.868,9.728C30.734,11.58 31.168,13.614 31.25,15.653L31.25,16.114C31.205,18.727 30.518,21.336 29.18,23.587C27.658,26.195 25.328,28.326 22.589,29.601C20.64,30.533 18.486,30.986 16.332,31.032ZM14.321,2.499C10.302,3.031 6.601,5.494 4.535,8.978C1.96,13.149 1.939,18.733 4.476,22.926C5.64,24.906 7.316,26.582 9.296,27.745C13.089,30.028 18.021,30.256 22.013,28.342C24.512,27.178 26.633,25.225 28.013,22.84C29.366,20.53 30.002,17.807 29.822,15.135C29.607,11.214 27.563,7.451 24.415,5.11C21.578,2.94 17.855,1.986 14.321,2.499ZM10.823,4.765C14.215,4.751 17.607,4.763 20.999,4.759C21.54,4.743 22.09,4.949 22.45,5.359C22.764,5.7 22.923,6.162 22.92,6.622C22.923,12.748 22.92,18.873 22.922,24.998C22.929,25.425 22.926,25.878 22.712,26.262C22.408,26.869 21.74,27.253 21.064,27.24C17.687,27.241 14.31,27.242 10.933,27.239C10.398,27.244 9.863,27.018 9.518,26.606C9.222,26.27 9.077,25.823 9.078,25.379C9.075,19.212 9.078,13.045 9.077,6.878C9.073,6.566 9.079,6.246 9.192,5.95C9.43,5.273 10.105,4.782 10.823,4.765ZM11.462,6.221C10.82,6.385 10.357,7.024 10.381,7.683C10.379,13.227 10.38,18.77 10.381,24.314C10.365,24.861 10.67,25.404 11.158,25.658C11.432,25.813 11.753,25.842 12.062,25.836C14.75,25.833 17.438,25.838 20.127,25.834C20.691,25.843 21.241,25.502 21.475,24.988C21.647,24.643 21.617,24.251 21.618,23.878C21.616,18.46 21.623,13.041 21.615,7.623C21.625,6.854 20.948,6.168 20.179,6.168C17.474,6.159 14.769,6.168 12.065,6.164C11.863,6.164 11.657,6.168 11.462,6.221ZM25.772,24.276L24.502,23.006C23.197,18.464 23.202,13.794 24.502,8.997L25.772,7.726C24.213,13.169 24.207,18.685 25.772,24.276ZM7.257,15.952C7.262,13.158 6.929,10.416 6.266,7.724L7.536,8.995C8.725,13.52 8.742,18.188 7.536,23.004L6.266,24.274C6.917,21.482 7.244,18.74 7.256,16.046L4.178,17.585L4.178,14.413L7.257,15.952ZM24.649,16.001L27.822,14.415L27.822,17.588L24.649,16.001Z"
+      android:fillColor="?android:attr/colorAccent"/>
 </vector>
