--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1680,6 +1680,7 @@
         <item>@string/qstile_squaremedo</item>
         <item>@string/qstile_inkdrop</item>
         <item>@string/qstile_cookie</item>
+        <item>@string/qstile_circleoutline</item>
     </string-array>
 
     <string-array name="qs_selector_values" translatable="false">
@@ -1695,6 +1696,7 @@
         <item>9</item>
         <item>10</item>
         <item>11</item>
+        <item>12</item>
     </string-array>
 
 </resources>
