--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1620,4 +1620,5 @@
     <string name="qstile_squaremedo">The Squaremedo</string>
     <string name="qstile_inkdrop">Ink</string>
     <string name="qstile_cookie">Cookie</string>
+    <string name="qstile_circleoutline">Circle Outline</string>
 </resources>
