--- a/res/xml/recents_style.xml
+++ b/res/xml/recents_style.xml
@@ -13,12 +13,12 @@
             android:persistent="false"/>
 
         <ListPreference
-            android:key="recents_component"
+            android:key="recents_layout_style"
             android:title="@string/recents_component_type_title"
             android:dialogTitle="@string/recents_component_type_title"
-            android:entries="@array/recents_component_type_title_entries"
+            android:entries="@array/recents_type_title_entries"
             android:defaultValue="0"
-            android:entryValues="@array/recents_component_type_title_values"/>
+            android:entryValues="@array/recents_type_title_values"/>
 
     <PreferenceCategory 
         android:title="@string/recent_button_title"
