--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -648,15 +648,23 @@
         <item>@string/qstile_default</item>
         <item>@string/qstile_circle_gradient</item>
         <item>@string/qstile_circle_trim</item>
+        <item>@string/qstile_cookie</item>
         <item>@string/qstile_dottedcircle</item>
         <item>@string/qstile_circle_dualtone</item>
         <item>@string/qstile_dual_tone_circle</item>
+        <item>@string/qstile_ink</item>
+        <item>@string/qstile_inkdrop</item>
+        <item>@string/qstile_mountain</item>
+        <item>@string/qstile_ninja</item>
         <item>@string/qstile_oreo</item>
         <item>@string/qstile_oreo_circle_trim</item>
         <item>@string/qstile_oreo_squircle_trim</item>
-        <item>@string/qstile_squircle_trim</item>
+        <item>@string/qstile_pokesign</item>
         <item>@string/qstile_squaremedo</item>
-        <item>@string/qstile_inkdrop</item>
+        <item>@string/qstile_squircle</item>
+        <item>@string/qstile_squircle_trim</item>
+        <item>@string/qstile_teardrop</item>
+        <item>@string/qstile_wavey</item>
     </string-array>
 
     <string-array name="qs_selector_values" translatable="false">
@@ -672,6 +680,14 @@
         <item>9</item>
         <item>10</item>
         <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
     </string-array>
 
     <!-- Notification ticker -->
