--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -12,6 +12,12 @@
         android:title="@string/ls_clock" />
 
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="hide_lockscreen_status_bar"
+            android:title="@string/hide_lockscreen_status_bar_title"
+            android:summary="@string/hide_lockscreen_status_bar_summary"
+            android:defaultValue="false" />
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="lockscreen_clock"
             android:title="@string/lockscreen_clock_title"
             android:summary="@string/lockscreen_clock_summary"
