--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -180,6 +180,19 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="lockscreen_clock_category"
+        android:title="@string/lockscreen_clock_category">
+
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="lock_clock_font_style"
+            android:title="@string/clock_font_style_title"
+            android:entries="@array/font_style_entries"
+            android:entryValues="@array/font_style_values"
+            android:defaultValue="4" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="lockscreen_weather_category"
         android:icon="@drawable/ic_weather"
         android:title="@string/lock_screen_weather_category" >
