--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -173,7 +173,7 @@
 
     <PreferenceCategory
         android:key="lockscreen_clock_category"
-        android:title="@string/lockscreen_clock_category">
+        android:title="@string/lockscreen_clockdate_category">
 
         <com.bliss.support.preferences.SystemSettingListPreference
             android:key="lock_clock_font_style"
@@ -181,6 +181,13 @@
             android:entries="@array/font_style_entries"
             android:entryValues="@array/font_style_values"
             android:defaultValue="4" />
+
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="lock_date_font_style"
+            android:title="@string/date_font_style_title"
+            android:entries="@array/font_style_entries"
+            android:entryValues="@array/font_style_values"
+            android:defaultValue="14" />
 
     </PreferenceCategory>
 
