Lockscreen Date Font Style [2/2]
Change-Id: I02c50c3ab238a23d35de3773640921be78a317d9
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1010,7 +1010,10 @@
     <string name="lockscreen_clock_selection_sammy_accent">Sammy accent</string>
     <string name="lockscreen_clock_selection_sammy_accent_alt">Sammy accent(darker hour)</string>
 
+    <!-- lockscreen clock and date font style -->
+    <string name="lockscreen_clockdate_category">Clock &amp; date</string>
     <string name="clock_font_style_title">Clock font style</string>
+    <string name="date_font_style_title">Date font style</string>
     <string name="font_style_title">Font style</string>
     <string name="font_normal">Normal</string>
     <string name="font_italic">Italic</string>
