--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -26,6 +26,7 @@
         <item>@string/battery_style_big_dotted_circle</item>
         <item>@string/battery_style_text</item>
         <item>@string/battery_style_hidden</item>
+         <item>@string/status_bar_battery_style_q</item>
     </string-array>
 
     <string-array name="status_bar_battery_style_values" translatable="false">
@@ -36,6 +37,7 @@
         <item>7</item>
         <item>5</item>
         <item>6</item>
+        <item>8</item>
     </string-array>
 
     <!-- Battery circle percent -->
