Blissify: add back all keyboard IME features back (2/2)
crdroid: Port IME selector notification toggle (1/2)

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I8dda91e93a9bb0bf5eb2e5c0a6653daa43cd1520

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -67,6 +67,18 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:icon="@drawable/ic_screen_off"
+        android:title="@string/ime_settings_title">
+
+    <Preference
+        android:key="ime_settings"
+        android:title="@string/ime_settings_title"
+        android:summary="@string/ime_settings_summary"
+        android:fragment="com.blissroms.blissify.fragments.misc.ImeSettings"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="display_cutout_settings"
         android:icon="@drawable/ic_items"
         android:title="@string/cutout_main">
