--- a/res/xml/lockscreen_visualizer.xml
+++ b/res/xml/lockscreen_visualizer.xml
@@ -46,6 +46,34 @@
         settings:units="@string/unit_milliseconds"
         android:dependency="lockscreen_lavalamp_enabled"/>
 
+    <PreferenceCategory
+        android:id="@+id/lockscreen_solid_lines_category"
+        android:title="@string/lockscreen_solid_lines_category" >
+
+        <com.blissroms.blissify.preference.SecureSettingSeekBarPreference
+            android:key="lockscreen_solid_units_count"
+            android:title="@string/lockscreen_solid_units_count_title"
+            android:defaultValue="32"
+            android:max="128"
+            settings:min="16"
+            settings:interval="16"/>
+
+        <com.blissroms.blissify.preference.SecureSettingSeekBarPreference
+            android:key="lockscreen_solid_fudge_factor"
+            android:title="@string/lockscreen_solid_fudge_factor_title"
+            android:defaultValue="16"
+            android:max="32"
+            settings:min="2"/>
+
+        <com.blissroms.blissify.preference.SecureSettingSeekBarPreference
+            android:key="lockscreen_solid_units_opacity"
+            android:title="@string/lockscreen_solid_units_opacity_title"
+            android:defaultValue="140"
+            android:max="255"
+            settings:min="0"
+            settings:interval="5"/>
+    </PreferenceCategory>
+
     <com.blissroms.blissify.preference.SecureSettingSwitchPreference
         android:key="ambient_visualizer"
         android:title="@string/ambient_visualizer_title"
