Add toggle for charging animation [2/2]
Change-Id: I11d38436ae82eddd64460e875611ce19944ef75d
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -837,4 +837,8 @@
     <string name="show_carrier_statusbar">Statusbar</string>
     <string name="show_carrier_enabled">Both</string>
 
+    <!-- Charging animation -->
+    <string name="lockscreen_charging_animation_title">Charging animation</string>
+    <string name="lockscreen_charging_animation_summary">Display animation when charging</string>
+
 </resources>
