--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -47,6 +47,13 @@
         android:title="@string/lockscreen_charging_category" >
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_charging_animation"
+        android:icon="@drawable/ic_flash_outline"
+        android:title="@string/lockscreen_charging_animation_title"
+        android:summary="@string/lockscreen_charging_animation_summary"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
         android:icon="@drawable/ic_lockscreen_charging_info"
         android:title="@string/lockscreen_battery_info_title"
