Option to Display Data Disabled Indicator Icon [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I8c2240acde9b1f8829dc38cd49eae9ea4f4fbf79

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -358,5 +358,9 @@
     <string name="volte_icon_title">VoLTE icon</string>
     <string name="volte_icon_summary">Display VoLTE icon when available</string>
 
+    <!-- Data disabled indicator -->
+    <string name="data_disabled_icon_title">Data disabled indicator</string>
+    <string name="data_disabled_icon_summary">Display the cross sign next to signal icon when data is disabled</string>
+
 </resources>
 
