--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -22,4 +22,11 @@
             android:summary="@string/volte_icon_summary"
             android:defaultValue="false"/>
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="data_disabled_icon"
+            android:icon="@drawable/ic_network"
+            android:title="@string/data_disabled_icon_title"
+            android:summary="@string/data_disabled_icon_summary"
+            android:defaultValue="true"/>
+
 </PreferenceScreen>
